--- a/resume.html
+++ b/resume.html
@@ -26,15 +26,19 @@
     <body>
         <ul>
             <li>Project</li>
-            <li><a href="resume.html">Resume</a></li>
+            <li>Resume</li>
             <li>About Me</li>
         </ul>
         <div class="container">
-            <h2>Bio</h2>
-            <p>I am a Junior at Georgia gwinnett college, majoring in Software development. 
-            </p>
-            <p>Winter with Snow</p>
-        <img src="snow.JPG" height="400" weight="400">
+            <h3>Sample User</h3>
+            <hr/>
+            <h4>Objective</h4>
+            To work as a software developer
+            <h4>Education</h4>
+            Junior at Georgia gwinnett college, majoring in Software development.
+            <h4>Skills/Technical Skills</h4>
+            
+            <h4>Additional Information</h4>
         </div>
         
     </body>
