--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>portfolio- resume</title>
+<title>Valentin's HomePage</title>
 <style type="text/css">
 </style>
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
