--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
 <div class="logo">
   <h1>Valentin Meica. Resume</h1>
 </div>
-<div id="logoImg" ><img src="images/logo-cv.png" width="291" height="244" alt="cv logo" /></div>
+<div id="logoImg" ><img src="images/valAvatar.jpg" width="291" height="244" alt="cv logo" /></div>
 <!--<div id="pic1"><img class="img" src="images/ppj.jpg" width="368" height="281" alt="ppj" /></div>
 <div id="pic2"><img class="img" src="images/pc store.jpg" width="327" height="276" alt="pcstore" /></div>
 <div id="pic3"><img class="img" src="images/fws1.jpg" width="342" height="249" alt="fws" /></div>
