--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
 <div id="nav">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li><a href="index.html">Home</a>    </li>
-    <li><a href="ggc.html">GGC</a></li>
-    <li><a href="about_me.html">About Me</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    
     <li><a href="resume.html">Resume</a></li>
-    <li><a href="goals.html">Goals</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </div>
 <div class="logo">
-  <h1>Valentin Meica. Resume</h1>
+  <h1>Valentin Meica. </h1>
 </div>
-<div id="logoImg" ><img src="images/logo-cv.png" width="291" height="244" alt="cv logo" /></div>
+<div id="logoImg" ><img src="images/welcome.png" width="291" height="244" alt="cv logo" /></div>
 <!--<div id="pic1"><img class="img" src="images/ppj.jpg" width="368" height="281" alt="ppj" /></div>
 <div id="pic2"><img class="img" src="images/pc store.jpg" width="327" height="276" alt="pcstore" /></div>
 <div id="pic3"><img class="img" src="images/fws1.jpg" width="342" height="249" alt="fws" /></div>
