--- a/resume.html
+++ b/resume.html
@@ -56,21 +56,34 @@
   &nbsp;vanjinn@gmail.com<br />
     vmeica@ggc.edu<br />
 	<p>&nbsp;</p>
-  <strong>Objective</strong></p>
+  <p><strong>Objective</strong></p>
   <p align="center">Seeking a position as software developer.</p>
-  <p>&nbsp;SKILLS</p>
+  
+   <p>&nbsp;</p>
+  <p><strong>EDUCATION</strong><br />
+    <h4>Georgia Gwinnett College</h4> - Lawrenceville, GA, juniour Pursuing Bachelors of Computer Science (Software development)
+    GPA 3.68</p>
+    
+	<p>Balti State University &mdash; Europe, Moldova 1 year  completed</p>
+
+  
+  <p>&nbsp;<strong>SKILLS</strong></p>
   <p>&bull; HTML/CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &bull; Microsoft Office/Email &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &bull; Computer Retail Sales<br />
       &bull; Computer Networking&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &bull; Internet Proficiency&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &bull; Java<br />
     &bull; Delivery &amp; Route Sales&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &bull; Windows 7,8,10 and iOS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&bull; Customer Service /Delivery Drive</p>
+  
   <p>&nbsp;</p>
   <p><strong>ADDITIONAL INFORMATION</strong></p>
   <p>&bull; Fluent in Russion and Romanian &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br /> </p>
-  <p>&nbsp;</p>
-  <p><strong>EDUCATION</strong><br />
-    Georgia Gwinnett College - Lawrenceville, GA, juniour Pursuing Bachelors of Computer Science (Software development)</p>
-	<p>Balti State University &mdash; Europe, Moldova 1 year  completed</p>
+  
+ 
+  
   <p>&nbsp;</p>
   <p><strong>WORK EXPERIENCE</strong></p>
+  <p><span class="bold">Federal Work Study</span> &mdash; - Georgia Gwinnett college
+           &mdash; 09/2014 - present <br />
+           &bull; 
+           </p>
   <p><span class="bold">Papa John's Pizza</span> &mdash; Winder, GA 12/2011 &mdash; 4/2012<br />
   &bull; Conducted regular activities associated with  delivering pizza to customers including on time delivery and ensuring product  quality standards were upheld &bull; Participated in team meetings and helped  provide an exceptional customer experience by ensuring order accuracy<br />
     Sales Associate</p>
