--- a/index.html
+++ b/index.html
@@ -2,49 +2,36 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Valentin's HomePage</title>
+<title>portfolio- Home</title>
 <style type="text/css">
 </style>
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
-#pic1 {
+#valPic {
 	position: absolute;
 	left: 969px;
 	top: 387px;
-	width: 400px;
-	height: 284px;
+	width: 404px;
+	height: 680px;
 	z-index: 201;
 }
-.content ul li {
-	font-size: 16px;
-}
-.bold {
-	font-weight: bold;
-}
-#pic2 {
+
+.content {
 	position: absolute;
-	left: 1119px;
-	top: 614px;
-	width: 347px;
-	height: 284px;
-	z-index: 202;
-}
-#pic3 {
-	position: absolute;
-	left: 979px;
-	top: 997px;
-	width: 368px;
-	height: 280px;
-	z-index: 203;
-}
-#pic4 {
-	position: absolute;
-	left: 1198px;
-	top: 1142px;
-	width: 329px;
-	height: 242px;
-	z-index: 204;
+	left: 50px;
+	top: 384px;
+	width: 903px;
+	height: 777px;
+	z-index: 1;
+	font-style: italic;
+	text-align: center;
+	font-size: 24px;
+	color: #FFF;
+	background-color: rgba(63,69,143,0.8);
+	border-radius: 30px 0px 30px 0px;
+	font-family: Verdana, Geneva, sans-serif;
+	padding: 5px;
 }
 </style>
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
@@ -52,60 +39,43 @@
 
 <body>
 <div class="content">
-  <p align="center"><strong>Valentin  Meica</strong><br />
-  &nbsp;vanjinn@gmail.com<br />
-    vmeica@ggc.edu<br />
-	<p>&nbsp;</p>
-  <strong>Objective</strong></p>
-  <p align="center">Seeking a position as software developer.</p>
-  <p>&nbsp;SKILLS</p>
-  <p>&bull; HTML/CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &bull; Microsoft Office/Email &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &bull; Computer Retail Sales<br />
-      &bull; Computer Networking&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &bull; Internet Proficiency&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &bull; Java<br />
-    &bull; Delivery &amp; Route Sales&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &bull; Windows 7,8,10 and iOS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&bull; Customer Service /Delivery Drive</p>
+  <p>Welcome to the electronic portfolio of</p>
+  <h3><strong>Valentin Meica</strong></h3>
+  <p>_______________________</p>
+  <h5>Education Information</h5>
+  <h5><strong>Major: </strong>Software Developement</h5>
+  <h5><strong>Year: </strong>junior</h5>
+  <h5><strong>Anticipated Graduation: </strong><span class="infoText">May 2017</span></h5>
+  <h5><strong><span class="infoText">Major GPA:</span></strong>4.0</h5>
+  <p>_____________________________________</p>
+  <p>This portfolio showcases a variety of my professional documents, academic work, and extracurricular experiences representative of the highlights of my undergraduate education at Georgia Gwinnett College.<br />
+    <br />
+    Please feel free to browse my work and contact me with any questions that you may have!<br />
+    <br />
+  Thank you for your time and interest!</p>
   <p>&nbsp;</p>
-  <p><strong>ADDITIONAL INFORMATION</strong></p>
-  <p>&bull; Fluent in Russion and Romanian &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br /> </p>
   <p>&nbsp;</p>
-  <p><strong>EDUCATION</strong><br />
-    Georgia Gwinnett College - Lawrenceville, GA, juniour Pursuing Bachelors of Computer Science (Software development)</p>
-	<p>Balti State University &mdash; Europe, Moldova 1 year  completed</p>
   <p>&nbsp;</p>
-  <p><strong>WORK EXPERIENCE</strong></p>
-  <p><span class="bold">Papa John's Pizza</span> &mdash; Winder, GA 12/2011 &mdash; 4/2012<br />
-  &bull; Conducted regular activities associated with  delivering pizza to customers including on time delivery and ensuring product  quality standards were upheld &bull; Participated in team meetings and helped  provide an exceptional customer experience by ensuring order accuracy<br />
-    Sales Associate</p>
-  <p><span class="bold">Computer Store</span> &mdash; in Moldova 09/2009 &mdash; 5/2010<br />
-  &bull; Partnered with customers to better understand  their computing requirements in order to build the machine most appropriate for  their application &bull; Exceeded sales quota thru providing customer value by  gaining an understanding of customer needs while staying current in regards to  leading hardware and software solutions/applications &bull; &quot;Upsold&quot; basic  computer equipment (input devices) and other supplies in order to drive  profitable revenue growth for the store</p>
-  <p><span class="bold">Federal Work Study</span>-- at GGC 09/2014--- present<br />
-    -Develope&nbsp;  digital media software tutorials for middle/high school girls and  ITECH1001 students as well as teaching them.&nbsp; </p>
-  
-  
-    
-  
-  
-<p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
 </div>
 <div id="nav">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li><a href="index.html">Home</a>    </li>
-    <li><a href="projects.html">Projects</a></li>
-    
+    <li><a href="ggc.html">GGC</a></li>
+    <li><a href="about_me.html">About Me</a></li>
     <li><a href="resume.html">Resume</a></li>
-    <li><a href="hobbies.html">Hobbies</a></li>
+    <li><a href="goals.html">Goals</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </div>
 <div class="logo">
   <h1>Valentin Meica. </h1>
 </div>
-<div id="logoImg" ><img src="images/welcome.png" width="291" height="244" alt="cv logo" /></div>
-<!--<div id="pic1"><img class="img" src="images/ppj.jpg" width="368" height="281" alt="ppj" /></div>
-<div id="pic2"><img class="img" src="images/pc store.jpg" width="327" height="276" alt="pcstore" /></div>
-<div id="pic3"><img class="img" src="images/fws1.jpg" width="342" height="249" alt="fws" /></div>
-<div id="pic4"><img class="img" src="images/fws2.jpeg" width="315" height="224" alt="pc fws" /></div>
--->
+<div id="logoImg" ><img src="images/welcome.png" width="495" height="223" alt="welcome" /></div>
+<div id="valPic"><img class="img" src="images/val.jpg" width="473" height="678" alt="val" /></div>
 <div id="apDiv1"></div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
