added redone resume

--- a/contact.html
+++ b/contact.html
@@ -84,11 +84,11 @@
 </div>
 <div id="nav">
   <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li><a href="index.html">Home</a>    </li>
-    <li><a href="ggc.html">GGC</a></li>
-    <li><a href="about_me.html">About Me</a></li>
+       <li><a href="index.html">Home</a>    </li>
+    <li><a href="projects.html">Projects</a></li>
+    
     <li><a href="resume.html">Resume</a></li>
-    <li><a href="goals.html">Goals</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </div>
