changed prj and hobby pages

--- a/hobbies.html
+++ b/hobbies.html
@@ -72,7 +72,7 @@
 <body>
 <div class="content">
 	<h1>Hobbies</h1>
-  <p>Coming sun</p>
+  <p>Coming soon</p>
   <p>_______________________</p>
   
   <p>&nbsp;</p>
@@ -94,6 +94,8 @@
 </div>
 <div id="logoImg" ><img src="images/hobby.jpg" width="394" height="200" alt="ontactme" /></div>
 <div id="valPic"><img class="img" src="images/code.jpg" width="470" height="359" /></div>
+
+<!--
 <div id="facebook"><img src="images/facebook1.jpg" width="56" height="56" usemap="#Map" border="0" />
   <a href="http://www.facebook.com/sharer.php?u=https://www.facebook.com/valentin.meica">
   <map name="Map" id="Map">
@@ -115,6 +117,8 @@
     <area shape="rect" coords="3,5,55,55" href="https://www.instagram.com/vanlord" link="https://www.facebook.com" />
   </map>
 </div>
+-->
+
 <div id="apDiv1"></div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
