--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
 <body>
 <div class="content">
 	<h1>Projects</h1>
-  <p>Coming sun</p>
+  <p>Coming soon</p>
   <p>_______________________</p>
   
   <p>&nbsp;</p>
@@ -93,27 +93,20 @@
 </div>
 <div id="logoImg" ><img src="images/proj.png" width="394" height="200" alt="ontactme" /></div>
 <div id="valPic"><img class="img" src="images/code.jpg" width="470" height="359" /></div>
-<div id="facebook"><img src="images/facebook1.jpg" width="56" height="56" usemap="#Map" border="0" />
-  <a href="http://www.facebook.com/sharer.php?u=https://www.facebook.com/valentin.meica">
-  <map name="Map" id="Map">
-    <area shape="rect" coords="4,3,54,52" href="https://www.facebook.com/valentin.meica" />
-  </map>
-</a></div>
-<div id="twitter"><img src="images/twitter1.png" width="56" height="56" usemap="#Map2" border="0" />
+
+
+
+<div id="twitter"><img src="images/github.png" width="90" height="56" usemap="#Map2" border="0" />
   <map name="Map2" id="Map2">
-    <area shape="rect" coords="3,3,57,56" href="https://www.twitter.com/" />
+    <area shape="rect" coords="3,3,57,56" href="https://www.github.com/valmeica/" />
   </map>
 </div>
-<div id="in"><img src="images/Linkedin.png" width="56" height="56" usemap="#Map3" border="0" />
+<div id="in"><img src="images/heroku.png" width="90" height="56" usemap="#Map3" border="0" />
   <map name="Map3" id="Map3">
-    <area shape="rect" coords="4,4,57,52" href="https://www.linkedin.com/" />
+    <area shape="rect" coords="4,4,57,52" href="https://dashboard.heroku.com/apps" />
   </map>
 </div>
-<div id="instagram"><img src="images/instagram.png" width="56" height="56" usemap="#Map4" border="0" />
-  <map name="Map4" id="Map4">
-    <area shape="rect" coords="3,5,55,55" href="https://www.instagram.com/vanlord" link="https://www.facebook.com" />
-  </map>
-</div>
+
 <div id="apDiv1"></div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
