changed  hobby pages

--- a/hobbies.html
+++ b/hobbies.html
@@ -92,8 +92,8 @@
 <div class="logo">
   <h1>Valentin Meica. Hobbies</h1>
 </div>
-<div id="logoImg" ><img src="images/hobby.jpg" width="394" height="200" alt="ontactme" /></div>
-<div id="valPic"><img class="img" src="images/code.jpg" width="470" height="359" /></div>
+<div id="logoImg" ><img src="images/hobbies.gif" width="394" height="200" alt="ontactme" /></div>
+<div id="valPic"><img class="img" src="images/hobby.jpg" width="470" height="359" /></div>
 
 <!--
 <div id="facebook"><img src="images/facebook1.jpg" width="56" height="56" usemap="#Map" border="0" />
