--- a/projects.html
+++ b/projects.html
@@ -89,9 +89,9 @@
   </ul>
 </div>
 <div class="logo">
-  <h1>Valentin Meica. Projects</h1>
+  <h1>Valentin Meica. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Projects</h1>
 </div>
-<div id="logoImg" ><img src="images/proj.png" width="394" height="200" alt="ontactme" /></div>
+<!--<div id="logoImg" ><img src="images/proj.png" width="394" height="200" alt="ontactme" /></div>-->
 <div id="valPic"><img class="img" src="images/code.jpg" width="470" height="359" /></div>
 
 
