--- a/projects.html
+++ b/projects.html
@@ -10,28 +10,13 @@
 <style type="text/css">
 #valPic {
 	position: absolute;
-	left: 975px;
-	top: 445px;
+	left: 1060px;
+	top: 421px;
 	width: 484px;
 	height: 388px;
 	z-index: 201;
 }
-.content {
-	position: absolute;
-	left: 50px;
-	top: 384px;
-	width: 903px;
-	height: 522px;
-	z-index: 1;
-	font-style: italic;
-	text-align: center;
-	font-size: 24px;
-	color: #FFF;
-	background-color: rgba(63,69,143,0.8);
-	border-radius: 30px 0px 30px 0px;
-	font-family: Verdana, Geneva, sans-serif;
-	padding: 5px;
-}
+
 
 #facebook {
 	position: absolute;
@@ -43,16 +28,16 @@
 }
 #twitter {
 	position: absolute;
-	left: 422px;
-	top: 693px;
+	left: 452px;
+	top: 499px;
 	width: 63px;
 	height: 63px;
 	z-index: 241;
 }
 #in {
 	position: absolute;
-	left: 521px;
-	top: 692px;
+	left: 596px;
+	top: 498px;
 	width: 64px;
 	height: 62px;
 	z-index: 242;
@@ -89,7 +74,8 @@
   </ul>
 </div>
 <div class="logo">
-  <h1>Valentin Meica. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Projects</h1>
+  <h1> Projects</h1>
+  <div id="logoImg"><img src="images/proj.jpg" width="225" height="205" alt=""/></div>
 </div>
 <!--<div id="logoImg" ><img src="images/proj.png" width="394" height="200" alt="ontactme" /></div>-->
 <div id="valPic"><img class="img" src="images/code.jpg" width="470" height="359" /></div>
