--- a/contact.html
+++ b/contact.html
@@ -10,57 +10,42 @@
 <style type="text/css">
 #valPic {
 	position: absolute;
-	left: 975px;
-	top: 445px;
+	left: 1023px;
+	top: 388px;
 	width: 484px;
 	height: 388px;
 	z-index: 201;
 }
-.content {
-	position: absolute;
-	left: 50px;
-	top: 384px;
-	width: 903px;
-	height: 522px;
-	z-index: 1;
-	font-style: italic;
-	text-align: center;
-	font-size: 24px;
-	color: #FFF;
-	background-color: rgba(63,69,143,0.8);
-	border-radius: 30px 0px 30px 0px;
-	font-family: Verdana, Geneva, sans-serif;
-	padding: 5px;
-}
+
 
 #facebook {
 	position: absolute;
-	left: 325px;
-	top: 693px;
+	left: 399px;
+	top: 617px;
 	width: 68px;
 	height: 63px;
 	z-index: 240;
 }
 #twitter {
 	position: absolute;
-	left: 422px;
-	top: 693px;
+	left: 525px;
+	top: 616px;
 	width: 63px;
 	height: 63px;
 	z-index: 241;
 }
 #in {
 	position: absolute;
-	left: 521px;
-	top: 692px;
+	left: 660px;
+	top: 621px;
 	width: 64px;
 	height: 62px;
 	z-index: 242;
 }
 #instagram {
 	position: absolute;
-	left: 617px;
-	top: 693px;
+	left: -150px;
+	top: 624px;
 	width: 61px;
 	height: 60px;
 	z-index: 243;
@@ -93,19 +78,17 @@
   </ul>
 </div>
 <div class="logo">
-  <h1>Valentin Meica. Contact</h1>
+  <h1> Contact </h1>
 </div>
-<div id="logoImg" ><img src="images/contactme.gif" width="394" height="200" alt="ontactme" /></div>
-<div id="valPic"><img class="img" src="images/code.jpg" width="470" height="359" /></div>
 <div id="facebook"><img src="images/facebook1.jpg" width="56" height="56" usemap="#Map" border="0" />
   <a href="http://www.facebook.com/sharer.php?u=https://www.facebook.com/valentin.meica">
   <map name="Map" id="Map">
-    <area shape="rect" coords="4,3,54,52" href="https://www.facebook.com/valentin.meica" />
+    <area shape="rect" coords="4,2,54,51" href="https://www.facebook.com/valentin.meica" />
   </map>
 </a></div>
 <div id="twitter"><img src="images/twitter1.png" width="56" height="56" usemap="#Map2" border="0" />
   <map name="Map2" id="Map2">
-    <area shape="rect" coords="3,3,57,56" href="https://www.twitter.com/" />
+    <area shape="rect" coords="3,2,57,55" href="https://www.twitter.com/" />
   </map>
 </div>
 <div id="in"><img src="images/Linkedin.png" width="56" height="56" usemap="#Map3" border="0" />
@@ -113,11 +96,7 @@
     <area shape="rect" coords="4,4,57,52" href="https://www.linkedin.com/" />
   </map>
 </div>
-<div id="instagram"><img src="images/instagram.png" width="56" height="56" usemap="#Map4" border="0" />
-  <map name="Map4" id="Map4">
-    <area shape="rect" coords="3,5,55,55" href="https://www.instagram.com/vanlord" link="https://www.facebook.com" />
-  </map>
-</div>
+<div id="logoImg"><img src="images/contact.png" width="196" height="175" alt=""/></div>
 <div id="apDiv1"></div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
