--- a/hobbies.html
+++ b/hobbies.html
@@ -10,60 +10,45 @@
 <style type="text/css">
 #valPic {
 	position: absolute;
-	left: 975px;
-	top: 445px;
-	width: 484px;
-	height: 388px;
+	left: 669px;
+	top: 713px;
+	width: 374px;
+	height: 302px;
 	z-index: 201;
 }
+
 .content {
 	position: absolute;
-	left: 50px;
-	top: 384px;
-	width: 903px;
-	height: 522px;
+	left: 125px;
+	top: 307px;
+	width: 506px;
+	height: 643px;
 	z-index: 1;
 	font-style: italic;
 	text-align: center;
 	font-size: 24px;
 	color: #FFF;
-	background-color: rgba(63,69,143,0.8);
+	background-color: rgba(20,47,29,0.50);
 	border-radius: 30px 0px 30px 0px;
 	font-family: Verdana, Geneva, sans-serif;
 	padding: 5px;
 }
 
-#facebook {
+#valPic2 {
 	position: absolute;
-	left: 325px;
-	top: 693px;
-	width: 68px;
-	height: 63px;
-	z-index: 240;
+	left: 979px;
+	top: 576px;
+	width: 350px;
+	height: 251px;
+	z-index: 201;
 }
-#twitter {
+#valPic3 {
 	position: absolute;
-	left: 422px;
-	top: 693px;
-	width: 63px;
-	height: 63px;
-	z-index: 241;
-}
-#in {
-	position: absolute;
-	left: 521px;
-	top: 692px;
-	width: 64px;
-	height: 62px;
-	z-index: 242;
-}
-#instagram {
-	position: absolute;
-	left: 617px;
-	top: 693px;
-	width: 61px;
-	height: 60px;
-	z-index: 243;
+	left: 723px;
+	top: 299px;
+	width: 438px;
+	height: 312px;
+	z-index: 201;
 }
 </style>
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
@@ -72,10 +57,15 @@
 <body>
 <div class="content">
 	<h1>Hobbies</h1>
-  <p>Coming soon</p>
+	<p>&nbsp; </p>
   <p>_______________________</p>
   
-  <p>&nbsp;</p>
+  <h5>- Photography</h5>
+  <h5>- Gaming</h5>
+  <h5>- Hiking</h5>
+  <h5>- Travel</h5>
+  <h5>- Movies/Anime</h5>
+  
   <p>&nbsp;</p>
   <p>&nbsp;</p>
 </div>
@@ -90,10 +80,10 @@
   </ul>
 </div>
 <div class="logo">
-  <h1>Valentin Meica. Hobbies</h1>
+  <h1>Hobbies</h1>
 </div>
-<div id="logoImg" ><img src="images/hobbies.gif" width="394" height="200" alt="ontactme" /></div>
-<div id="valPic"><img class="img" src="images/hobby.jpg" width="470" height="359" /></div>
+<div id="logoImg" ><img src="images/hobby.png" width="212" height="177" alt=""/></div>
+<div class="img"></div>
 
 <!--
 <div id="facebook"><img src="images/facebook1.jpg" width="56" height="56" usemap="#Map" border="0" />
@@ -120,6 +110,9 @@
 -->
 
 <div id="apDiv1"></div>
+<div id="valPic2"><img class="img" src="images/code.jpg" width="346" height="247" /></div>
+<div id="valPic3"><img src="images/rex.jpg" width="436" height="310" alt=""/></div>
+<div id="valPic"><img src="images/destiny.gif" width="371" height="300" alt=""/></div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
 </script>
