--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 
 .content {
 	position: absolute;
-	left: 50px;
-	top: 384px;
-	width: 903px;
-	height: 777px;
+	left: 125px;
+	top: 307px;
+	width: 870px;
+	height: 821px;
 	z-index: 1;
 	font-style: italic;
 	text-align: center;
 	font-size: 24px;
 	color: #FFF;
-	background-color: rgba(63,69,143,0.8);
+	background-color: rgba(20,47,29,0.50);
 	border-radius: 30px 0px 30px 0px;
 	font-family: Verdana, Geneva, sans-serif;
 	padding: 5px;
@@ -38,6 +38,7 @@
 </head>
 
 <body>
+<div id="logoImg"><img src="images/i.jpg" width="210" height="187" alt=""/></div>
 <div class="content">
   <p>Welcome to the electronic portfolio of</p>
   <h3><strong>Valentin Meica</strong></h3>
@@ -72,10 +73,8 @@
   </ul>
 </div>
 <div class="logo">
-  <h1>Valentin Meica. </h1>
+  <h1> Welcome! </h1>
 </div>
-<div id="logoImg" ><img src="images/welcome.png" width="495" height="223" alt="welcome" /></div>
-<div id="valPic"><img class="img" src="images/val.jpg" width="473" height="678" alt="val" /></div>
 <div id="apDiv1"></div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
