--- a/resume.html
+++ b/resume.html
@@ -39,13 +39,31 @@
   <p>Juniour Pursuing Bachelors of Computer Science (Software development) GPA 3.68</p>
   <p>Balti State University — Europe, Moldova 1 year completed</p>
   <h4>SKILLS</h4>
-  <p>
-  • HTML/CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;• Microsoft Office/Email&nbsp;&nbsp; &nbsp;&nbsp;• Computer Retail Sales <br />
-  • Computer Networking&nbsp;&nbsp; &nbsp;&nbsp;• Internet Proficiency&nbsp;&nbsp;&nbsp;&nbsp;• Java <br />
-  • Delivery &amp; Route Sales&nbsp;&nbsp; &nbsp;• Windows 7,8,10 and iOS&nbsp; &nbsp;&nbsp;&nbsp;• Customer Service </p>
+  
+  
+  <hr>
+
+<p><strong>TECHNICAL SKILLS:</strong></p>
+
+<ul>
+<li><strong>Languages</strong>: Java; Ruby; PHP; HTML/CSS JavaScript</li><li><strong>Internet Technology Experience</strong>: Extensive experience with Java servlets; JSP; mod_perl; XML and XSL; client/server architecture; HTML; CGI scripts; shell scripts; ASP; ASP.NET</li>
+<li><strong>Operating Systems</strong>: IOS; Macintosh; Windows XP, Vista, 7, 8.1, 10</li>
+<li><strong>Databases</strong>: SQL; Oracle Products </li>
+<li><strong>Graphics</strong>:Photoshop; Gimp; Blender; Dreamweaver </li>
+</ul>
+
+<hr>
   
   <h4>ADDITIONAL INFORMATION</h4>
-  <p>• Fluent in Russion and Romanian <br /></p>
+  <ul>
+    <li>Fluent in Russion and Romanian </li>
+    <li>Delivery &amp; Route Sales</li>
+    <li>Microsoft Office/Email</li>
+    <li>Computer Retail Sales</li>
+    <li>Custumer Service</li>
+  </ul>
+  
+  <hr>
   
   <h4>WORK EXPERIENCE</h4>
   <p>Federal Work Study — Georgia Gwinnett college — 09/2014 - present <br /></p>
@@ -59,11 +77,11 @@
   <p>Sales Consultant - COMPUTER STORE IN EUROPE — in Moldova 09/2009 — 5/2010<br /></p>
   
   <p>• Exceeded sales quota through providing customer value by gaining an understanding of customer needs while staying current in regards to leading hardware and software solutions/applications.</p>
-  
+  <hr>
   <h4>COMMUNICATION</h4> <br />
   <p>• Delivered multiple IT related presentations through Federal work study, participated in scientific expos presenting innovative technology.</p>
+  <hr>
   <h4>LEADERSHIP</h4><br />
-  
   <p>• Was the team leader in various projects throughout college, including a database design and a text based game development. Also an ethics and professionalism group research.</p>
     
 </div>
@@ -87,11 +105,7 @@
   <h1>  Resume</h1>
 </div>
 <div id="logoImg" ><img src="images/self.jpg" width="235" height="209" alt=""/></div>
-<!--<div id="pic1"><img class="img" src="images/ppj.jpg" width="368" height="281" alt="ppj" /></div>
-<div id="pic2"><img class="img" src="images/pc store.jpg" width="327" height="276" alt="pcstore" /></div>
-<div id="pic3"><img class="img" src="images/fws1.jpg" width="342" height="249" alt="fws" /></div>
-<div id="pic4"><img class="img" src="images/fws2.jpeg" width="315" height="224" alt="pc fws" /></div>
--->
+
 <div id="apDiv1"></div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
