--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
   <p>_______________________</p>
   <h5>Phone: </h5>
   <p>678-920-0485</p>
-  <p>Emil:</p>
+  <p>Email:</p>
   <p>vmeica@ggc.edu</p>
   <p>_____________________________________</p>
   <p>&nbsp;</p>
