blog page added

--- a/hobbies.html
+++ b/hobbies.html
@@ -77,6 +77,7 @@
     <li><a href="resume.html">Resume</a></li>
     <li><a href="hobbies.html">Hobbies</a></li>
     <li><a href="contact.html">Contact</a></li>
+    <li><a href="blogpost.html">Blog</a></li>
   </ul>
 </div>
 <div class="logo">
@@ -85,29 +86,7 @@
 <div id="logoImg" ><img src="images/hobby.png" width="212" height="177" alt=""/></div>
 <div class="img"></div>
 
-<!--
-<div id="facebook"><img src="images/facebook1.jpg" width="56" height="56" usemap="#Map" border="0" />
-  <a href="http://www.facebook.com/sharer.php?u=https://www.facebook.com/valentin.meica">
-  <map name="Map" id="Map">
-    <area shape="rect" coords="4,3,54,52" href="https://www.facebook.com/valentin.meica" />
-  </map>
-</a></div>
-<div id="twitter"><img src="images/twitter1.png" width="56" height="56" usemap="#Map2" border="0" />
-  <map name="Map2" id="Map2">
-    <area shape="rect" coords="3,3,57,56" href="https://www.twitter.com/" />
-  </map>
-</div>
-<div id="in"><img src="images/Linkedin.png" width="56" height="56" usemap="#Map3" border="0" />
-  <map name="Map3" id="Map3">
-    <area shape="rect" coords="4,4,57,52" href="https://www.linkedin.com/" />
-  </map>
-</div>
-<div id="instagram"><img src="images/instagram.png" width="56" height="56" usemap="#Map4" border="0" />
-  <map name="Map4" id="Map4">
-    <area shape="rect" coords="3,5,55,55" href="https://www.instagram.com/vanlord" link="https://www.facebook.com" />
-  </map>
-</div>
--->
+
 
 <div id="apDiv1"></div>
 <div id="valPic2"><img class="img" src="images/code.jpg" width="346" height="247" /></div>
