--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <li><a href="resume.html">Resume</a></li>
     <li><a href="hobbies.html">Hobbies</a></li>
     <li><a href="contact.html">Contact</a></li>
+    <li><a href="blogpost.html">Blog</a></li>
   </ul>
 </div>
 <div class="logo">
