--- a/hobbies.html
+++ b/hobbies.html
@@ -22,7 +22,7 @@
 	left: 125px;
 	top: 307px;
 	width: 506px;
-	height: 643px;
+	height: 1000px;
 	z-index: 1;
 	font-style: italic;
 	text-align: center;
@@ -61,10 +61,15 @@
   <p>_______________________</p>
   
   <h5>- Photography</h5>
+      <p>I love to travel and I always take my camera with me. Love to take a nice shot and add it to my collection.</p>
   <h5>- Gaming</h5>
+      <p>Destiny is a game that I am curently enjoying. There are many other games but I just do not have the time :)</p>
   <h5>- Hiking</h5>
+      <p>I started enjoying hiking when I moved to Georgia. It has beatiful places.</p>
   <h5>- Travel</h5>
-  <h5>- Movies/Anime</h5>
+      <p>Every so often I plan a trip to a place that I have never seen before. Right now my goal is to visit all the major cityes in the US. I would also like to visit Japan one day.</p>
+  <h5>- Movies/Anime</h5>s
+  <h5>- Coding</h5>
   
   <p>&nbsp;</p>
   <p>&nbsp;</p>
