--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
 <body>
 <div class="content">
 	<h1>Projects</h1>
-  <p>Coming soon</p>
+  <p>Curently all my projects are on github.</p>
   <p>_______________________</p>
   
   <p>&nbsp;</p>
