--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
         <style>
 			body{
-				background:#333 url(bg.jpg) repeat top left;
+				background:#333 url(images/bg2.jpg) repeat top left;
 				font-family:Arial;
 			}
 			span.reference{
@@ -46,17 +46,17 @@
 			<ul id="sdt_menu" class="sdt_menu">
 				<li>
 					<a href="#">
-						<img src="images/2.jpg" alt=""/>
+						<img src="images/self.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
-							<span class="sdt_link">About me</span>
+							<span class="sdt_link" href ="index.html">About me</span>
 							<span class="sdt_descr">Get to know me</span>
 						</span>
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="images/1.jpg" alt=""/>
+						<img src="images/self.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
 							<span class="sdt_link">Portfolio</span>
@@ -71,7 +71,7 @@
 				</li>
 				<li>
 					<a href="#">
-						<img src="images/3.jpg" alt=""/>
+						<img src="images/self.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
 							<span class="sdt_link">Inspiration</span>
@@ -81,7 +81,7 @@
 				</li>
 				<li>
 					<a href="#">
-						<img src="images/4.jpg" alt=""/>
+						<img src="images/self.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
 							<span class="sdt_link">Photos</span>
@@ -91,7 +91,7 @@
 				</li>
 				<li>
 					<a href="#">
-						<img src="images/5.jpg" alt=""/>
+						<img src="images/self.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
 							<span class="sdt_link">Blog</span>
@@ -101,7 +101,7 @@
 				</li>
 				<li>
 					<a href="#">
-						<img src="images/6.jpg" alt=""/>
+						<img src="images/self.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
 							<span class="sdt_link">Projects</span>
