--- a/index2.html
+++ b/index2.html
@@ -64,7 +64,7 @@
 						</span>
 					</a>
 					<div class="sdt_box">
-							<a href="#">Websites</a>
+							<a href="index.html">Websites</a>
 							<a href="#">Illustrations</a>
 							<a href="#">Photography</a>
 					</div>
