--- a/index2.html
+++ b/index2.html
@@ -49,7 +49,7 @@
 						<img src="images/self.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
-							<span class="sdt_link" href ="index.html">About me</span>
+							<span class="sdt_link">About me</span>
 							<span class="sdt_descr">Get to know me</span>
 						</span>
 					</a>
@@ -65,8 +65,8 @@
 					</a>
 					<div class="sdt_box">
 							<a href="index.html">Websites</a>
-							<a href="#">Illustrations</a>
-							<a href="#">Photography</a>
+							<a href="hobbies.html">Illustrations</a>
+							<a href="blogpost.html">Photography</a>
 					</div>
 				</li>
 				<li>
