--- a/index2.html
+++ b/index2.html
@@ -53,6 +53,11 @@
 							<span class="sdt_descr">Get to know me</span>
 						</span>
 					</a>
+					<div class="sdt_box">
+							<a href="index.html">About</a>
+							<a href="hobbies.html">Hobbies</a>
+							<a href="blogpost.html">Places to Visit</a>
+					</div>
 				</li>
 				<li>
 					<a href="#">
