--- a/index2.html
+++ b/index2.html
@@ -61,7 +61,7 @@
 				</li>
 				<li>
 					<a href="#">
-						<img src="images/self.jpg" alt=""/>
+						<img src="images/portfolio.gif" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
 							<span class="sdt_link">Portfolio</span>
@@ -69,20 +69,22 @@
 						</span>
 					</a>
 					<div class="sdt_box">
-							<a href="index.html">Websites</a>
-							<a href="hobbies.html">Illustrations</a>
-							<a href="blogpost.html">Photography</a>
+							<a href="resume.html">Resume</a>
+							<a href="projects.html">Projects</a>
 					</div>
 				</li>
 				<li>
 					<a href="#">
-						<img src="images/self.jpg" alt=""/>
+						<img src="images/contact.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
-							<span class="sdt_link">Inspiration</span>
-							<span class="sdt_descr">Where ideas get born</span>
+							<span class="sdt_link">Contact</span>
+							<span class="sdt_descr">Get in Touch</span>
 						</span>
 					</a>
+					<div class="sdt_box">
+							<a href="contact.html">Contact Me</a>
+					</div>
 				</li>
 				<li>
 					<a href="#">
@@ -100,9 +102,12 @@
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
 							<span class="sdt_link">Blog</span>
-							<span class="sdt_descr">I write about design</span>
+							<span class="sdt_descr">I write about...</span>
 						</span>
 					</a>
+					<div class="sdt_box">
+							<a href="#">Comming Sun</a>
+					</div>
 				</li>
 				<li>
 					<a href="#">
