--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
-        <title>Slide Down Box Menu with jQuery and CSS3</title>
+        <title>Valentin Meica's webpage</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta name="description" content="Slide Down Box Menu with jQuery and CSS3" />
         <meta name="keywords" content="jquery, css3, sliding, box, menu, cube, navigation, portfolio, thumbnails"/>
@@ -75,7 +75,7 @@
 				</li>
 				<li>
 					<a href="#">
-						<img src="images/contact.jpg" alt=""/>
+						<img src="images/contact2.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
 							<span class="sdt_link">Contact</span>
@@ -98,7 +98,7 @@
 				</li>
 				<li>
 					<a href="#">
-						<img src="images/self.jpg" alt=""/>
+						<img src="images/bp.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
 							<span class="sdt_link">Blog</span>
@@ -111,7 +111,7 @@
 				</li>
 				<li>
 					<a href="#">
-						<img src="images/self.jpg" alt=""/>
+						<img src="images/code2.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
 							<span class="sdt_link">Projects</span>
