--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,12 @@
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
+
+	body{
+				background:#333 url(images/bg2.jpg) repeat top left;
+				font-family:Arial;
+			}
+
 #valPic {
 	position: absolute;
 	left: 1023px;
@@ -69,7 +75,7 @@
 </div>
 <div id="nav">
   <ul id="MenuBar1" class="MenuBarHorizontal">
-       <li><a href="index.html">Home</a>    </li>
+       <li><a href="home.html">Home</a>    </li>
     <li><a href="projects.html">Projects</a></li>
     
     <li><a href="resume.html">Resume</a></li>
