--- a/index2.html
+++ b/index2.html
@@ -98,7 +98,7 @@
 				</li>
 				<li>
 					<a href="#">
-						<img src="images/bp.jpg" alt=""/>
+						<img src="images/Bp.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
 							<span class="sdt_link">Blog</span>
