--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,11 @@
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 
+	body{
+				background:#333 url(images/bg2.jpg) repeat top left;
+				font-family:Arial;
+			}
+
 #pic1 {
 	position: absolute;
 	left: 969px;
@@ -66,7 +71,11 @@
   <hr>
   
   <h4>WORK EXPERIENCE</h4>
-  <p>Federal Work Study — Georgia Gwinnett college — 09/2014 - present <br /></p>
+  
+  <p>SP GLOBAL – IPARTNERS - (INTERNSHIP)  — 05/2016 - Present </p>
+  <p>• Developing, building, and maintaining report solutions for Insurance companies in an agile environment, while ensuring customer satisfaction and requirements specification.</p>
+  
+  <p>Federal Work Study — Georgia Gwinnett college — 09/2014 - 06/2016 <br /></p>
   
   <p>• Learning new diverse digital media and coding software and develop tutorials for middle/high school girls and ITECH1001 students. Conducting the class sessions, teaching the particular IT related software with the purpose of advertising and involving more females and other major students into the Information technology field.</p>
   
@@ -93,7 +102,7 @@
 <div id="nav">
 
   <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li><a href="index.html">Home</a>    </li>
+    <li><a href="home.html">Home</a>    </li>
     <li><a href="projects.html">Projects</a></li>
     
     <li><a href="resume.html">Resume</a></li>
