--- a/blogpost.html
+++ b/blogpost.html
@@ -7,10 +7,10 @@
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
 <style>
   
-body {	font-family: Verdana, Geneva, sans-serif;
-	background-color: #030303;
-	background-size: 100%;
-  }
+	body{
+				background:#333 url(images/bg2.jpg) repeat top left;
+				font-family:Arial;
+			}
   
 #nav {
 	position: absolute;
@@ -100,7 +100,7 @@ body {	font-family: Verdana, Geneva, sans-serif;
   
   <div id="nav">
   <ul id="MenuBar1" class="MenuBarHorizontal">
-       <li><a href="index.html">Home</a>    </li>
+       <li><a href="home.html">Home</a>    </li>
     <li><a href="projects.html">Projects</a></li>
     
     <li><a href="resume.html">Resume</a></li>
