--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
 						</span>
 					</a>
 					<div class="sdt_box">
-							<a href="index.html">About</a>
+							<a href="about.html">About</a>
 							<a href="hobbies.html">Hobbies</a>
 							<a href="blogpost.html">Places to Visit</a>
 					</div>
