--- a/contact.html
+++ b/contact.html
@@ -65,13 +65,19 @@
   <p>Please feel free to contact me for more information!</p>
   <p>_______________________</p>
   <h5>Phone: </h5>
-  <p>678-920-0485</p>
+  <p>###-###-####</p>
   <p>Email:</p>
   <p>vmeica@ggc.edu</p>
   <p>_____________________________________</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
+  
+  <h5>Leave a Comment</h5>
+  <textarea rows="4" cols="50">
+    
+  </textarea>
+  
 </div>
 <div id="nav">
   <ul id="MenuBar1" class="MenuBarHorizontal">
