--- a/hobbies.html
+++ b/hobbies.html
@@ -66,7 +66,31 @@
 	<p>&nbsp; </p>
   <p>_______________________</p>
   
-  <h5>- Photography</h5>
+  <ul>
+  <li><h5>- Photography</h5>
+   <ul>
+    <li>I love to travel and I always take my camera with me. Love to take a nice shot and add it to my collection.</li>
+   </ul>
+  </li>
+  <li><h5>- Gaming</h5>
+    <ul>
+      <li>Destiny</li>
+      <li>No Man's Sky</li>
+    </ul>
+  </li>
+  <li><h5>- Hiking</h5>
+  <ul>
+      <li>I started enjoying hiking when I moved to Georgia. It has beatiful places.</li>
+  </ul>
+  </li>
+  <li><h5>- Travel</h5>
+  <ul>
+      <li>Every so often I plan a trip to a place that I have never seen before. Right now my goal is to visit all the major cityes in the US. I would also like to visit Japan one day.</li>
+  </ul>
+  </li>
+</ul>
+  
+ <!-- <h5>- Photography</h5>
       <p>I love to travel and I always take my camera with me. Love to take a nice shot and add it to my collection.</p>
   <h5>- Gaming</h5>
       <p>Destiny is a game that I am curently enjoying. There are many other games but I just do not have the time :)</p>
@@ -76,7 +100,7 @@
       <p>Every so often I plan a trip to a place that I have never seen before. Right now my goal is to visit all the major cityes in the US. I would also like to visit Japan one day.</p>
   <h5>- Movies/Anime</h5>s
   <h5>- Coding</h5>
-  
+  -->
   <p>&nbsp;</p>
   <p>&nbsp;</p>
 </div>
