--- a/home.html
+++ b/home.html
@@ -115,6 +115,9 @@
 							<span class="sdt_descr">I like to photograph</span>
 						</span>
 					</a>
+					 	<div class="sdt_box">
+							<a href="photo.html">My Photography</a>
+					</div>
 				</li>
 				<li>
 					<a href="#">
