--- a/photo.html
+++ b/photo.html
@@ -44,11 +44,10 @@ td {
 
 <body>
 <div class="photo">
-  <p>Photo</p>
   
   
-<h2>The vertical-align Property</h2>
-<p>This property sets the vertical alignment (like top, bottom, or middle) of the content in th or td.</p>
+<h2>My Photo</h2>
+<p>What inspires me.</p>
 <table>
   <tr>
     <th>Firstname</th>
@@ -135,7 +134,7 @@ td {
 
 
 
-<div id="logoImg"><img src="images/contact.png" width="196" height="175" alt=""/></div>
+<div id="logoImg"><img src="images/cam.png" width="196" height="175" alt=""/></div>
 <div id="apDiv1"></div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
