video and audio

--- a/home.html
+++ b/home.html
@@ -44,15 +44,15 @@
 				    background:transparent  top left;
 				    width:633px;
 				    height:150px;
-				    margin-top:300px;
+				    margin-top:100px;
 				    margin-left: 50px;
 			}
 			.comm{
 				   background:transparent  top left;
 				    width:633px;
 				    height:150px;
-				    margin-top:200px;
-				    margin-left:200px;
+				    margin-top:150px;
+				    margin-left:50px;
 			}
 			
 		</style>
@@ -151,9 +151,24 @@
 		</div>
 		
 
+<br>
+<div class="radio">
+	
+	<audio controls>
+         <source src="audio/lindsey.mp3" type="audio/ogg">
+         <source src="audio/lindsey.mp3" type="audio/mpeg">
+         Your browser does not support the audio element.
+   </audio>
+	
 
-
-
+	
+	     <video width="320" height="240" controls>
+         <source src="video/tlou.mp4" type="video/mp4">
+         <source src="video/tlou.mp4" type="video/ogg">
+         Your browser does not support the video tag.
+    </video>
+	
+</div>
 
 <div class="radio">
 	
