video and audio

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 				text-indent:-9000px;
 				background:transparent url(images/logo.jpg) no-repeat top left;
 				width:800px;
-				height:200px;
+				height:300px;
 			}
 			
 			.radio{
@@ -52,7 +52,15 @@
 				    width:633px;
 				    height:150px;
 				    margin-top:150px;
-				    margin-left:50px;
+				    margin-left:1500px;
+			}
+			
+				.vid{
+				   background:transparent  top left;
+				    width:1200px;
+				    height:300px;
+				    margin-top:25px;
+				    margin-left:900px;
 			}
 			
 		</style>
@@ -60,10 +68,21 @@
 
     <body>
     	
+    <video width="765" height="550" controls>
+         <source src="video/tlou.mp4" type="video/mp4">
+         <source src="video/tlou.mp4" type="video/ogg">
+         Your browser does not support the video tag.
+    </video>
+    <audio controls>
+         <source src="audio/lindsey.mp3" type="audio/ogg">
+         <source src="audio/lindsey.mp3" type="audio/mpeg">
+         Your browser does not support the audio element.
+   </audio>
 		<div class="content">
-			<h1 class="title">Title</h1>
+			<!--<h1 class="title">Title</h1>-->
 			
 			<ul id="sdt_menu" class="sdt_menu">
+				
 				<li>
 					<a href="#">
 						<img src="images/self.jpg" alt=""/>
@@ -151,24 +170,6 @@
 		</div>
 		
 
-<br>
-<div class="radio">
-	
-	<audio controls>
-         <source src="audio/lindsey.mp3" type="audio/ogg">
-         <source src="audio/lindsey.mp3" type="audio/mpeg">
-         Your browser does not support the audio element.
-   </audio>
-	
-
-	
-	     <video width="320" height="240" controls>
-         <source src="video/tlou.mp4" type="video/mp4">
-         <source src="video/tlou.mp4" type="video/ogg">
-         Your browser does not support the video tag.
-    </video>
-	
-</div>
 
 <div class="radio">
 	
