--- a/home.html
+++ b/home.html
@@ -156,14 +156,14 @@
 						<img src="images/code2.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
-							<span class="sdt_link">Projects</span>
+							<span class="sdt_link">Fun Facts</span>
 							<span class="sdt_descr">I like to code</span>
 						</span>
 					</a>
 					<div class="sdt_box">
-						<a href="#">Job Board Website</a>
-						<a href="#">Shopping Cart</a>
-						<a href="#">Interactive Maps</a>
+						<a href="#"></a>
+						<a href="#"></a>
+						<a href="#"></a>
 					</div>
 				</li>
 			</ul>
