video and audio

--- a/home.html
+++ b/home.html
@@ -127,7 +127,7 @@
 				</li>
 				<li>
 					<a href="#">
-						<img src="images/self.jpg" alt=""/>
+						<img src="photo/IMG_05.JPG" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
 							<span class="sdt_link">Photos</span>
@@ -192,8 +192,8 @@ Comment: <input type="text" name="comment" value="Leave a comment"><br>
 
         <div>
             <span class="reference">
-                <a href="#">#</a>
-				<a href="#">#</a>
+                <a href="#">Created as part of a college project.</a>
+				<a href="www.valmeica.github.io">valmeica.github.io</a>
             </span>
 		</div>
 
