video and audio

--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
   <p>Seeking a position as software developer.</p>
   <h4>EDUCATION</h4><br />
   <h4>Georgia Gwinnett College</h4>
-  <p>Juniour Pursuing Bachelors of Computer Science (Software development) GPA 3.82</p>
+  <p>Senior Pursuing Bachelors of Computer Science (Software development) GPA 3.82</p>
   <p>Balti State University — Europe, Moldova 1 year completed</p>
   <h4>SKILLS</h4>
   
