--- a/photo.html
+++ b/photo.html
@@ -113,7 +113,7 @@ td {
 
 <div id="nav">
   <ul id="MenuBar1" class="MenuBarHorizontal">
-       <li><a href="home.html">Home</a>    </li>
+       <li><a href="index.html">Home</a>    </li>
     <li><a href="projects.html">Projects</a></li>
     
     <li><a href="resume.html">Resume</a></li>
