the embeded menu

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="#">
+					<a href="test.html">
 						<img src="images/code2.jpg" alt=""/>
 						<span class="sdt_active"></span>
 						<span class="sdt_wrap">
@@ -160,11 +160,7 @@
 							<span class="sdt_descr">I like to code</span>
 						</span>
 					</a>
-					<div class="sdt_box">
-						<a href="#"></a>
-						<a href="#"></a>
-						<a href="#"></a>
-					</div>
+					
 				</li>
 			</ul>
 		</div>
