--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
         <style>
 			body{
-				background:#333 url(images/bg.jpg) repeat top left;
+				background:#333 url(images/bg2.jpg) repeat top left;
 				font-family:Arial;
 				color:#0B75AF;
 			}
