--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta name="description" content="Slide Down Box Menu with jQuery and CSS3" />
         <meta name="keywords" content="jquery, css3, sliding, box, menu, cube, navigation, portfolio, thumbnails"/>
-		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
+		    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
         <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
+        <link href="css/hamburgers.css" rel="stylesheet">
         <style>
 			body{
 				background:#333 url(images/bg2.jpg) repeat top left;
@@ -67,7 +68,8 @@
     </head>
 
     <body>
-    	
+   
+   <!-- 	
     <video width="765" height="550" controls>
          <source src="video/tlou.mp4" type="video/mp4">
          <source src="video/tlou.mp4" type="video/ogg">
@@ -78,6 +80,7 @@
          <source src="audio/lindsey.mp3" type="audio/mpeg">
          Your browser does not support the audio element.
    </audio>
+   -->
 		<div class="content">
 			<!--<h1 class="title">Title</h1>-->
 			
@@ -167,23 +170,6 @@
 		
 
 
-<div class="radio">
-	
-	<h5>How Do you like my website.</h5>
-  <form>
-    <input type="radio" name="gender" value="like"> Like<br>
-    <input type="radio" name="gender" value="don't care"> Don't Care<br>
-    <input type="radio" name="gender" value="dislike"> Dislike
-  </form>
-</div>
-
-<div class="comm">
-<form action="demo_form.asp">
-Comment: <input type="text" name="comment" value="Leave a comment"><br>
-
-<input type="submit" value="Submit">
-</form>
-</div>
 
 
         <div>
